// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar que el componente <GifExpertApp /> funcione correctamente Debe de mostrar correctamente el <GifExpertApp/> 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setcategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Probar que el componente <GifExpertApp /> funcione correctamente Debe de mostrara una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setcategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Burger"
      key="Burger"
    />
  </ol>
</Fragment>
`;
